--- a/style.css
+++ b/style.css
@@ -436,7 +436,7 @@ footer .line-footer p a{
         padding: 80px 8%;
     }
 
-    .img-port{
+    .img-portifolio{
         width: 100%;
         max-width: 360px;
         margin: 0 auto;
